--- a/navbar.html
+++ b/navbar.html
@@ -2,8 +2,12 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="https://uit-econ.github.io/">Hovedside bachelor</a>
   <a href="index_open.html" target="blank">Hjem</a>
-  <a href="forelesningsplan.html">Forelesningsplan</a>
-  <a href="innleveringer.html">Innleveringer</a>
-  <a href="seminarplan.html">Seminarer</a>
-  <a href="readme_no.html">Lag et kursrepositorie</a>
+  <a href="forelesningsplan.html" style="font-size:18px"> - Forelesnings- og seminarplan</a>
+  <a href="forelesninger.html" style="font-size:18px"> - Forelesningsnotater</a>
+  <a href="video.html" style="font-size:18px"> - Videoer</a>
+  <a href="temaer.html">Temaer/moduler</a>
+  <a href="mappeevaluering.html">Innleveringer</a>
+  <a href="mappeevaluering.html#frister" style="font-size:18px"> - Frister</a>
+  <a href="mappeevaluering.html">Mappeevaluering</a>
+  <a href="muntligeksamen.html">Muntlig eksamen</a>
 </div>
