--- a/assets/seminar_4.html
+++ b/assets/seminar_4.html
@@ -64,7 +64,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="oppgave-a" class="level2">
 <h2 class="anchored" data-anchor-id="oppgave-a">Oppgave a)</h2>
-<p>Gertruds nyttefunksjon er gitt ved <span class="math inline">\(u=c^{1-\sigma}l^{\sigma}\)</span>. Hennes arbeidsfri inntekt er 100, timelønna er 10 og hun har 60 timer fritid tilgjengelig. Når hun er frisk er hennes sykdomsindeks <span class="math inline">\(\sigma=2/7\)</span>.La oss anta at det i utgangspunktet ikke finnes noen sykelønnsordning. Hva er hennes optimale tilpasning av arbeidstid og konsum når hun er frisk? Vis matematisk og grafisk.</p>
+<p>Gertruds nyttefunksjon er gitt ved <span class="math inline">\(u=c^{1-\sigma}l^{\sigma}\)</span>. Hennes arbeidsfri inntekt (<span class="math inline">\(m\)</span>) er 100 (i ti-tall kroner), timelønna er 10 og Hun kan maksimalt jobbe 60 timer per uke (<span class="math inline">\(l_0=60\)</span>). Når hun er frisk er hennes sykdomsindeks <span class="math inline">\(\sigma=2/7\)</span>.La oss anta at det i utgangspunktet ikke finnes noen sykelønnsordning. Hva er hennes optimale tilpasning av arbeidstid og konsum når hun er frisk? Vis matematisk og grafisk.</p>
 </section>
 <section id="oppgave-b" class="level2">
 <h2 class="anchored" data-anchor-id="oppgave-b">Oppgave b)</h2>
